Adding missing tests.